<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="oxG-CD-4Of">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="UnitTestingDemo" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9e9-MH-HYp">
                                <rect key="frame" x="20" y="343" width="374" height="34"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="34" id="82i-ER-4kF"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="WJ6-Am-AWz"/>
                                </connections>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eYt-k1-Bj0">
                                <rect key="frame" x="20" y="386" width="374" height="34"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="34" id="XIL-cY-DsL"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Jij-QK-L69"/>
                                </connections>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LKr-b2-lzA">
                                <rect key="frame" x="184" y="433" width="46" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="4Ba-OH-wLO"/>
                                    <constraint firstAttribute="width" constant="46" id="UW6-Lp-UCF"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <state key="normal" title="Submit"/>
                                <connections>
                                    <action selector="submitButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="brz-w9-Vbb"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="LKr-b2-lzA" firstAttribute="top" secondItem="eYt-k1-Bj0" secondAttribute="bottom" constant="13" id="0pZ-IU-uc8"/>
                            <constraint firstItem="9e9-MH-HYp" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="EvM-N6-PgM"/>
                            <constraint firstItem="eYt-k1-Bj0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="GgR-oQ-XfU"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="eYt-k1-Bj0" secondAttribute="trailing" constant="20" id="Hia-41-vgN"/>
                            <constraint firstItem="eYt-k1-Bj0" firstAttribute="top" secondItem="9e9-MH-HYp" secondAttribute="bottom" constant="9" id="L4m-jT-pnU"/>
                            <constraint firstItem="LKr-b2-lzA" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="baT-vI-6QH"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="9e9-MH-HYp" secondAttribute="trailing" constant="20" id="bk4-f8-mRe"/>
                            <constraint firstItem="LKr-b2-lzA" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="wtA-uh-cIJ"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="pIo-4C-6ar"/>
                    <connections>
                        <outlet property="passwordTextField" destination="eYt-k1-Bj0" id="jB8-HW-HsV"/>
                        <outlet property="usernameTextField" destination="9e9-MH-HYp" id="EV3-fJ-wZR"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="944.92753623188412" y="75"/>
        </scene>
        <!--Table View Controller-->
        <scene sceneID="af4-md-221">
            <objects>
                <tableViewController storyboardIdentifier="TableViewController" id="g3D-E0-Xql" customClass="TableViewController" customModule="UnitTestingDemo" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="Bpm-cC-8dw">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TableViewCell" textLabel="d9r-WT-Jda" detailTextLabel="0Gd-Or-Zxi" rowHeight="70" style="IBUITableViewCellStyleSubtitle" id="Raf-AG-wex" customClass="TableViewCell" customModule="UnitTestingDemo" customModuleProvider="target">
                                <rect key="frame" x="0.0" y="55.5" width="414" height="70"/>
                                <autoresizingMask key="autoresizingMask"/>
                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Raf-AG-wex" id="h4P-RM-Mwg">
                                    <rect key="frame" x="0.0" y="0.0" width="414" height="70"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="d9r-WT-Jda">
                                            <rect key="frame" x="20" y="15" width="33" height="20.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                            <nil key="textColor"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="0Gd-Or-Zxi">
                                            <rect key="frame" x="20" y="38.5" width="44" height="14.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                            <nil key="textColor"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                    </subviews>
                                </tableViewCellContentView>
                            </tableViewCell>
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="g3D-E0-Xql" id="ukl-wd-GJa"/>
                            <outlet property="delegate" destination="g3D-E0-Xql" id="fMt-KG-F7Q"/>
                        </connections>
                    </tableView>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Wfd-NZ-BZR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1640.5797101449277" y="75"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="2RK-OP-Fsb">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="oxG-CD-4Of" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="lGs-KY-DJD">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Bk5-8T-wHj"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Z0G-OH-Q5f" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="34.782608695652179" y="75"/>
        </scene>
    </scenes>
    <resources>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
    </resources>
</document>
